# tello_controller

./: CMakeLists.txt  README.md  package.xml
controller/: joystick.py
launch/: tello_controller.launch
msg/: command.msg
src/include/: socket_tello.h  tello_camera_interface.h  tello_command_interface.h  tello_state_interface.h
src/source/: socket_tello.cpp  socket_tello_camera.cpp  socket_tello_command.cpp  socket_tello_state.cpp  tello_camera_interface.cpp  tello_command_interface.cpp  tello_state_interface.cpp
video_analysis/: detection_video.py  recognition_video.py  video.py  video_haarcascade.py
video_analysis/recognition/output/: embeddings.pickle  le.pickle  recognizer.pickle
